--- a/packages/rest/tsconfig.json
+++ b/packages/rest/tsconfig.json
@@ -8,7 +8,7 @@
     "tsBuildInfoFile": "./buildcache/.tsbuildinfo"
   },
   "references": [
-    { "path": "../common" }
+    { "path": "../core" }
   ],
   "include": [
     "src/main/**/*"
