--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./packages",
     "paths": {
-      "blank-ts-monorepo-common": ["./common/src/main/ts"],
-      "blank-ts-monorepo-facade": ["./facade/src/main/ts"],
-      "blank-ts-monorepo-plugin": ["./plugin/src/main/ts"]
+      "@gerritkit/core": ["./core/src/main/ts"],
+      "@gerritkit/rest": ["./rest/src/main/ts"]
     }
   }
 }
