--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - '10'
+  - '12'
 
 before_install:
   - npm install -g yarn
@@ -27,3 +27,5 @@ deploy:
   skip_cleanup: true
   script:
     - yarn release
+  on:
+    branch: master
