--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gerritkit/core",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": false,
   "publishConfig": {
     "access": "public"
@@ -40,7 +40,7 @@
     "tslib": "^2.0.1"
   },
   "devDependencies": {
-    "@gerritkit/infra": "*"
+    "@gerritkit/infra": "1.0.0"
   },
   "peerDependencies": {},
   "optionalDependencies": {},
