chore(release): 1.0.0 [skip ci]
# @gerritkit/rest 1.0.0 (2020-09-05)

### Performance Improvements

* **rest:** add readme, tech release ([7c55d0d](https://github.com/gerritkit/client/commit/7c55d0d3771e7d3fc9381263b536d222af89f08e))

### Dependencies

* **@gerritkit/core:** upgraded to 1.0.0

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gerritkit/rest",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": false,
   "publishConfig": {
     "access": "public"
@@ -38,7 +38,7 @@
   "dependencies": {
     "@qiwi/substrate": "^1.18.37",
     "tslib": "^2.0.1",
-    "@gerritkit/core": "*"
+    "@gerritkit/core": "1.0.0"
   },
   "devDependencies": {},
   "peerDependencies": {},
