--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "test": "yarn lint && yarn test:spec",
+    "test:spec": "yarn jest",
     "jest": "jest -w=1 --config=jest.config.json",
     "lint": "tslint -p tsconfig.test.json src/**/*.ts",
     "lint:fix": "yarn lint --fix",
@@ -36,9 +37,10 @@
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
+    "@gerritkit/core": "1.0.0",
     "@qiwi/substrate": "^1.18.37",
-    "tslib": "^2.0.1",
-    "@gerritkit/core": "1.0.0"
+    "axios": "^0.20.0",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {},
   "peerDependencies": {},
