feat: refactor, add tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bootstrap": "lerna bootstrap",
     "jest": "jest",
     "test:report": "yarn test && yarn coveralls:push",
+    "pretest": "yarn lint",
     "test": "yarn jest",
+    "lint": "lerna run lint",
+    "format": "lerna run format",
     "test:concurrent": "lerna run test --concurrency 1 --stream --no-prefix && yarn coverage:merge",
     "coverage:merge": "node scripts/js/coverage-merge.js",
     "coveralls:push": "cat ./coverage/lcov.info | coveralls || echo 'coveralls push failed :(' && exit 0",
