--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
   "collectCoverage": true,
+  "testEnvironment": "node",
   "projects": [
     "<rootDir>/packages/core/jest.config.json",
     "<rootDir>/packages/rest/jest.config.json"
