--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -24,9 +24,11 @@
     "jest": "^26.4.2",
     "terser": "^5.3.0",
     "ts-jest": "^26.3.0",
-    "tslint": "^6.1.3",
-    "tslint-config-qiwi": "^1.5.0",
     "typedoc": "^0.19.1",
+    "eslint": "^7.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-qiwi": "^1.7.0",
+    "prettier": "^2.1.1",
     "typedoc-plugin-external-module-name": "^4.0.3",
     "typescript": "^4.0.2",
     "typescript-eslint-parser": "^22.0.0",
