--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -24,7 +24,8 @@
     "test": "yarn lint && yarn test:spec",
     "test:spec": "yarn jest",
     "jest": "jest -w=1 --config=jest.config.json",
-    "lint": "tslint -p tsconfig.test.json src/**/*.ts",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint src/**/*.ts",
     "lint:fix": "yarn lint --fix",
     "clean": "rimraf target typings flow-typed buildcache",
     "build": "yarn build:es5 && yarn build:es6 && yarn build:ts && yarn build:libdef && yarn docs && yarn uglify",
@@ -42,7 +43,12 @@
     "axios": "^0.20.0",
     "tslib": "^2.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-qiwi": "^1.7.0",
+    "prettier": "^2.1.1"
+  },
   "peerDependencies": {},
   "optionalDependencies": {},
   "repository": {
