fix: add lib to tsconfig

--- a/packages/infra/tsconfig.compiler.json
+++ b/packages/infra/tsconfig.compiler.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["esnext"],
+    "lib": ["esnext", "DOM"],
     "noImplicitAny": true,
     "noEmitHelpers": true,
     "noUnusedLocals": true,
