--- a/jest.config.json
+++ b/jest.config.json
@@ -3,6 +3,7 @@
   "testEnvironment": "node",
   "projects": [
     "<rootDir>/packages/core/jest.config.json",
+    "<rootDir>/packages/generator/jest.config.json",
     "<rootDir>/packages/rest/jest.config.json"
   ]
 }
