--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -25,7 +25,7 @@
     "test:spec": "yarn jest",
     "jest": "jest -w=1 --config=jest.config.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/main/ts/generator/*.ts",
     "lint:fix": "yarn lint --fix",
     "clean": "rimraf target typings flow-typed buildcache",
     "build": "yarn build:es5 && yarn build:es6 && yarn build:ts && yarn build:libdef && yarn docs && yarn uglify",
