--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -22,23 +22,25 @@
   ],
   "scripts": {
     "test": "yarn lint && yarn test:spec",
+    "test:spec": "yarn jest",
     "jest": "jest -w=1 --config=jest.config.json",
-    "lint": "tslint -p tsconfig.test.json src/**/*.ts",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint src/main/ts/*.ts",
     "lint:fix": "yarn lint --fix",
     "clean": "rimraf target typings flow-typed buildcache",
     "build": "yarn build:es5 && yarn build:es6 && yarn build:ts && yarn build:libdef && yarn docs && yarn uglify",
     "build:es5": "mkdir -p target/es5 && tsc -p tsconfig.es5.json",
     "build:es6": "mkdir -p target/es6 && tsc -p tsconfig.es6.json",
     "build:ts": "cp -r src/main/ts/ target/ts/",
-    "build:libdef": "dts-generator --project ./ --out typings/index.d.ts --prefix @gerritkit/rest/target/es5 --name @gerritkit/rest --main @gerritkit/rest/target/es5/index && libdeffix --dts=./typings/index.d.ts --prefix=@gerritkit/rest/target/es5 && flowgen typings/index.d.ts --output-file flow-typed/index.flow.js",
+    "build:libdef": "libdefkit --tsconfig=tsconfig.es5.json --tsconfig=tsconfig.es6.json",
     "docs": "typedoc --readme README.md --tsconfig tsconfig.es5.json src/main --ignoreCompilerErrors || exit 0",
     "uglify": "for f in $(find target -name '*.js'); do short=${f%.js}; terser -c -m -o $short.js -- $f; done",
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
     "@qiwi/substrate": "^1.18.37",
-    "tslib": "^2.0.1",
-    "@gerritkit/core": "1.0.0"
+    "axios": "^0.20.0",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {},
   "peerDependencies": {},
