--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@gerritkit/core",
-  "version": "1.0.0",
+  "name": "@gerritkit/generator",
+  "version": "0.0.0",
   "private": false,
   "publishConfig": {
     "access": "public"
   },
-  "description": "Gerritkit core components",
+  "description": "Code generator for gerrit REST API",
   "keywords": [],
   "main": "target/es5/index.js",
   "source": "target/ts/index.ts",
@@ -22,9 +22,10 @@
   ],
   "scripts": {
     "test": "yarn lint && yarn test:spec",
+    "test:spec": "yarn jest",
     "jest": "jest -w=1 --config=jest.config.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/main/ts/generator/*.ts",
     "lint:fix": "yarn lint --fix",
     "clean": "rimraf target typings flow-typed buildcache",
     "build": "yarn build:es5 && yarn build:es6 && yarn build:ts && yarn build:libdef && yarn docs && yarn uglify",
@@ -37,11 +38,11 @@
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
-    "@qiwi/substrate": "^1.18.37",
+    "@qiwi/libdefkit": "^2.0.1",
+    "@types/cheerio": "^0.22.22",
+    "axios": "^0.20.0",
+    "cheerio": "^1.0.0-rc.3",
     "tslib": "^2.0.1"
-  },
-  "devDependencies": {
-    "@gerritkit/infra": "1.0.0"
   },
   "peerDependencies": {},
   "optionalDependencies": {},
@@ -54,5 +55,8 @@
   "bugs": {
     "url": "https://github.com/gerritkit/client/issues"
   },
-  "homepage": "https://github.com/gerritkit/client/#readme"
+  "homepage": "https://github.com/gerritkit/client/#readme",
+  "devDependencies": {
+    "axios-mock-adapter": "^1.18.2"
+  }
 }
