--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,35 @@ node_js: 14
 
 jobs:
   include:
-    - stage: test
+    - stage: build
       install: yarn
-      before_script:
-        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        - chmod +x ./cc-test-reporter
-        - ./cc-test-reporter before-build
-      script:
-        - yarn build
-        - yarn test:report
-      after_script:
-        - ./cc-test-reporter format-coverage -t lcov ./coverage/lcov.info
-        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+      script: yarn build
       workspaces:
         create:
           name: shared
           paths:
             - node_modules
             - packages
+    - &test
+      stage: test
+      node_js: 10
+      install: skip
+      script: yarn test
+      workspaces:
+        use: shared
+    - <<: *test
+      node_js: 12
+    - <<: *test
+      node_js: 14
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
+      script:
+        - yarn test:report
+      after_script:
+        - ./cc-test-reporter format-coverage -t lcov ./coverage/lcov.info
+        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
     - stage: release
       if: branch = master AND type != pull_request
