--- a/jest.config.json
+++ b/jest.config.json
@@ -4,6 +4,7 @@
   "projects": [
     "<rootDir>/packages/core/jest.config.json",
     "<rootDir>/packages/generator/jest.config.json",
+    "<rootDir>/packages/native/jest.config.json",
     "<rootDir>/packages/rest/jest.config.json"
   ]
 }
