--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@gerritkit/core": ["./core/src/main/ts"],
       "@gerritkit/generator": ["./generator/src/main/ts"],
-      "@gerritkit/rest": ["./rest/src/main/ts"]
+      "@gerritkit/rest": ["./rest/src/main/ts"],
+      "@gerritkit/native": ["./native/src/main/ts"]
     }
   }
 }
