--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@gerritkit/generator",
-  "version": "1.0.0",
+  "name": "@gerritkit/native",
+  "version": "0.0.0",
   "private": false,
   "publishConfig": {
     "access": "public"
   },
-  "description": "Code generator for gerrit REST API",
+  "description": "Native client for gerrit",
   "keywords": [],
   "main": "target/es5/index.js",
   "source": "target/ts/index.ts",
@@ -25,7 +25,7 @@
     "test:spec": "yarn jest",
     "jest": "jest -w=1 --config=jest.config.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src/main/ts/**/*.ts",
+    "lint": "eslint src/main/ts/*.ts",
     "lint:fix": "yarn lint --fix",
     "clean": "rimraf target typings flow-typed buildcache",
     "build": "yarn build:es5 && yarn build:es6 && yarn build:ts && yarn build:libdef && yarn docs && yarn uglify",
