--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ jobs:
       workspaces:
         use: shared
       install: skip
-      script: yarn release
+      script: npx @qiwi/semrel-toolkit multi-semrel
