--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "coverage:merge": "node scripts/js/coverage-merge.js",
     "coveralls:push": "cat ./coverage/lcov.info | coveralls || echo 'coveralls push failed :(' && exit 0",
     "docs": "typedoc packages/**/src/main --ignoreCompilerErrors || exit 0",
-    "postupdate": "yarn && npx yarn-audit-fix --audit-level=moderate && yarn bootstrap && yarn build && yarn test",
+    "postupdate": "yarn && npx yarn-audit-fix --audit-level=moderate && yarn bootstrap && yarn build && yarn test"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
