perf: update ts

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:concurrent": "lerna run test --concurrency 1 --stream --no-prefix && yarn coverage:merge",
     "coverage:merge": "node scripts/js/coverage-merge.js",
     "coveralls:push": "cat ./coverage/lcov.info | coveralls || echo 'coveralls push failed :(' && exit 0",
-    "docs": "typedoc packages/**/src/main --ignoreCompilerErrors || exit 0",
+    "docs": "typedoc packages/**/src/main",
     "postupdate": "yarn && npx yarn-audit-fix --audit-level=moderate && yarn bootstrap && yarn build && yarn test"
   },
   "devDependencies": {
