--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -41,6 +41,7 @@
     "@types/cheerio": "^0.22.22",
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
+    "lodash.omit": "^4.5.0",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {},
