--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -57,6 +57,7 @@
   },
   "homepage": "https://github.com/gerritkit/client/#readme",
   "devDependencies": {
+    "@types/lodash.omit": "^4.5.6",
     "axios-mock-adapter": "^1.18.2"
   }
 }
