--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -41,6 +41,7 @@
     "@types/cheerio": "^0.22.22",
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
+    "lodash.omit": "^4.5.0",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {},
@@ -56,6 +57,7 @@
   },
   "homepage": "https://github.com/gerritkit/client/#readme",
   "devDependencies": {
+    "@types/lodash.omit": "^4.5.6",
     "axios-mock-adapter": "^1.18.2"
   }
 }
