--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -38,6 +38,7 @@
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
+    "@qiwi/substrate": "^1.20.6",
     "@types/cheerio": "^0.22.22",
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
