--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -38,9 +38,9 @@
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
-    "@gerritkit/native": "1.2.0",
-    "@qiwi/substrate": "^1.20.6",
-    "axios": "^0.20.0",
+    "@gerritkit/native": "^1.2.0",
+    "@qiwi/substrate": "1.20.6",
+    "axios": "0.20.0",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
