--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -38,11 +38,12 @@
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
-    "@types/cheerio": "^0.22.22",
-    "axios": "^0.20.0",
-    "cheerio": "^1.0.0-rc.3",
+    "@qiwi/substrate": "^1.20.6",
+    "@types/cheerio": "0.22.22",
+    "axios": "0.20.0",
+    "cheerio": "1.0.0-rc.3",
     "lodash.omit": "^4.5.0",
-    "tslib": "^2.0.3"
+    "tslib": "^2.2.0"
   },
   "peerDependencies": {},
   "optionalDependencies": {},
@@ -58,6 +59,6 @@
   "homepage": "https://github.com/gerritkit/client/#readme",
   "devDependencies": {
     "@types/lodash.omit": "^4.5.6",
-    "axios-mock-adapter": "^1.18.2"
+    "axios-mock-adapter": "^1.19.0"
   }
 }
