--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gerritkit/rest",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "private": false,
   "publishConfig": {
     "access": "public"
@@ -38,7 +38,7 @@
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
-    "@gerritkit/native": "^1.2.0",
+    "@gerritkit/native": "1.2.1",
     "@qiwi/substrate": "1.20.6",
     "axios": "0.20.0",
     "tslib": "^2.2.0"
