--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "coveralls": "^3.1.0",
     "find-git-root": "^1.0.4",
     "jest": "^26.6.3",
-    "snazzy": "^9.0.0"
+    "snazzy": "^9.0.0",
+    "tsm": "^2.2.2",
+    "typedoc": "^0.23.19"
   },
   "repository": {
     "type": "git",
