--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,7 @@
     "build": "yarn infra:npm-run-all -p -l build:es5 build:es6 build:ts build:libdef docs uglify",
     "build:es5": "yarn infra:mkdirp target/es5 && yarn infra:tsc -p tsconfig.es5.json",
     "build:es6": "yarn infra:mkdirp target/es6 && yarn infra:tsc -p tsconfig.es6.json",
-    "build:ts": "cp -r src/main/ts/ target/ts/",
+    "build:ts": "cpy src/main/ts/ target/ts/",
     "build:libdef": "yarn infra:libdefkit --tsconfig=tsconfig.es5.json --tsconfig=tsconfig.es6.json",
     "docs": "run -T typedoc",
     "uglify": "yarn infra:uglify",
