--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -6,7 +6,12 @@
   },
   "description": "Gerritkit infra assets",
   "keywords": [],
-  "files": [],
+  "main": "target/es5/index.js",
+  "source": "target/ts/index.ts",
+  "types": "target/es5/index.d.ts",
+  "typescript": {
+    "definition": "target/es5/index.d.ts"
+  },
   "scripts": {
     "postupdate": "yarn",
     "infra:npm-run-all": "cd $INIT_CWD && npm-run-all",
@@ -31,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "buildstamp": "^2.1.0",
     "c8": "^7.12.0",
+    "cpy-cli": "^4.2.0",
     "depcheck": "^1.4.3",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
