--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -34,18 +34,18 @@
     "build:es6": "yarn infra:mkdirp target/es6 && yarn infra:tsc -p tsconfig.es6.json",
     "build:ts": "cpy src/main/ts/ target/ts/",
     "build:libdef": "yarn infra:libdefkit --tsconfig=tsconfig.es5.json --tsconfig=tsconfig.es6.json",
-    "docs": "typedoc --out docs/typedoc ./ --readme README.md --tsconfig tsconfig.es5.json src/main",
+    "docs": "run -T typedoc",
     "uglify": "yarn infra:uglify",
     "postupdate": "yarn && yarn build && yarn test"
   },
   "dependencies": {
     "@gerritkit/core": "workspace:*",
-    "@qiwi/substrate": "^1.20.6",
-    "@types/cheerio": "0.22.22",
-    "axios": "0.21.1",
-    "cheerio": "1.0.0-rc.3",
+    "@qiwi/substrate": "^1.20.15",
+    "@types/cheerio": "0.22.31",
+    "axios": "1.1.3",
+    "cheerio": "1.0.0-rc.12",
     "lodash.omit": "^4.5.0",
-    "tslib": "^2.2.0"
+    "tslib": "^2.4.1"
   },
   "repository": {
     "type": "git",
@@ -58,7 +58,7 @@
   },
   "homepage": "https://github.com/gerritkit/client/#readme",
   "devDependencies": {
-    "@types/lodash.omit": "^4.5.6",
-    "axios-mock-adapter": "^1.19.0"
+    "@types/lodash.omit": "^4.5.7",
+    "axios-mock-adapter": "^1.21.2"
   }
 }
