--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,12 +21,13 @@
   ],
   "scripts": {
     "test": "yarn infra:npm-run-all -p -l lint test:spec test:depcheck",
+    "test:spec": "yarn jest",
     "jest": "jest -w=1 --config=jest.config.json",
     "format": "yarn infra:prettier --write 'src/**/*.ts'",
     "lint": "yarn infra:eslint src/**/*.ts",
     "lint:fix": "yarn lint --fix",
     "clean": "yarn infra:rimraf target typings flow-typed buildcache coverage docs buildstamp.json",
-    "test:depcheck": "yarn infra:depcheck --ignores='typedoc,tslib,earljs,uvu,eslint-*,prettier-*,**/*-infra' --ignore-patterns='typings'",
+    "test:depcheck": "yarn infra:depcheck --ignores='typedoc,tslib,earljs,@qiwi/substrate,@gerritkit/infra,eslint-*,prettier-*,**/*-infra' --ignore-patterns='typings'",
     "prebuild": "yarn infra:buildstamp --git --out.path buildstamp.json",
     "build": "yarn infra:npm-run-all -p -l build:es5 build:es6 build:ts build:libdef docs uglify",
     "build:es5": "yarn infra:mkdirp target/es5 && yarn infra:tsc -p tsconfig.es5.json",
