perf: up some deps, move to gh actions (#41)

--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -1,37 +1,57 @@
 {
   "name": "@gerritkit/infra",
   "version": "1.2.3",
-  "private": false,
   "publishConfig": {
     "access": "public"
   },
   "description": "Gerritkit infra assets",
   "keywords": [],
-  "files": [],
+  "main": "target/es5/index.js",
+  "source": "target/ts/index.ts",
+  "types": "target/es5/index.d.ts",
+  "typescript": {
+    "definition": "target/es5/index.d.ts"
+  },
   "scripts": {
-    "postupdate": "yarn"
+    "postupdate": "yarn",
+    "infra:npm-run-all": "cd $INIT_CWD && npm-run-all",
+    "infra:libdefkit": "cd $INIT_CWD && libdefkit",
+    "infra:buildstamp": "cd $INIT_CWD && buildstamp",
+    "infra:c8": "cd $INIT_CWD && c8",
+    "infra:depcheck": "cd $INIT_CWD && depcheck",
+    "infra:eslint": "cd $INIT_CWD && eslint",
+    "infra:prettier": "cd $INIT_CWD && prettier",
+    "infra:rimraf": "cd $INIT_CWD && rimraf",
+    "infra:terser": "cd $INIT_CWD && terser",
+    "infra:mkdirp": "cd $INIT_CWD && mkdirp",
+    "infra:tsc": "cd $INIT_CWD && tsc",
+    "infra:uglify": "./scripts/sh/uglify.sh"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@qiwi/libdefkit": "^2.1.8",
-    "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "jest": "^26.6.3",
-    "terser": "^5.6.1",
-    "ts-jest": "^26.5.4",
-    "typedoc": "^0.19.2",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-qiwi": "^1.10.8",
-    "prettier": "^2.2.1",
-    "typedoc-plugin-external-module-name": "^4.0.6",
-    "typescript": "^4.2.3",
-    "typescript-eslint-parser": "^22.0.0",
+    "@qiwi/libdefkit": "^4.0.8",
+    "@qiwi/npm-run-all": "^4.1.7",
+    "@swissquote/crafty-preset-jest": "^1.20.0",
+    "@types/jest": "^29.2.1",
+    "@types/mkdirp": "^1",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "buildstamp": "^2.1.0",
+    "c8": "^7.12.0",
+    "cpy-cli": "^4.2.0",
+    "depcheck": "^1.4.3",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-qiwi": "^1.17.8",
+    "jest": "^29.2.2",
+    "mkdirp": "^1.0.4",
+    "prettier": "^2.7.1",
+    "prettier-config-qiwi": "^1.7.3",
     "rimraf": "^3.0.2",
-    "@swissquote/crafty-preset-jest": "^1.14.0"
+    "terser": "^5.15.1",
+    "ts-jest": "^29.0.3",
+    "typedoc": "^0.23.19",
+    "typescript": "^4.8.4",
+    "typescript-eslint-parser": "^22.0.0"
   },
-  "peerDependencies": {},
-  "optionalDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gerritkit/client.git"
