--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "yarn workspaces foreach -pt run build",
     "coverage:merge": "node scripts/js/coverage-merge.js",
     "coveralls:push": "cat ./coverage/lcov.info | coveralls || echo 'coveralls push failed :(' && exit 0",
+    "codeclimate:push": "codeclimate-test-reporter < ./coverage/lcov.info || exit 0",
     "docs": "typedoc --out docs/typedoc ./ --readme README.md --tsconfig tsconfig.es5.json src/main",
     "postupdate": "yarn && yarn clean && yarn build && yarn test",
     "updeps": "npm_config_yes=true npx npm-upgrade-monorepo"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
+    "codeclimate-test-reporter": "^0.5.1",
     "coveralls": "^3.1.1",
     "find-git-root": "^1.0.4",
     "jest": "^29.2.2",
