--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,14 +24,14 @@ jobs:
   build:
     name: build
     needs: init
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
       - name: Download artifact
         uses: qiwi-forks/action-download-artifact@v2
@@ -85,14 +85,14 @@ jobs:
   test_push:
     needs: [build, init]
     if: github.event_name == 'push'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
       - name: Restore artifact from cache (if exists)
         uses: actions/cache@v3
@@ -148,8 +148,8 @@ jobs:
     needs: [build, init]
     strategy:
       matrix:
-        os: [ ubuntu-20.04 ]
-        node-version: [ 16 ]
+        os: [ ubuntu-22.04 ]
+        node-version: [ 18 ]
     name: Test (Node v${{ matrix.node-version }}, OS ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     steps:
@@ -195,7 +195,7 @@ jobs:
         run: yarn
 
       - name: Full test
-        if: matrix.node-version == '16' && matrix.os == 'ubuntu-20.04'
+        if: matrix.node-version == '18' && matrix.os == 'ubuntu-22.04'
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: yarn test
@@ -204,13 +204,18 @@ jobs:
     name: Release
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     needs: [test_push, init]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           ref: master
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
 
       - name: Restore artifact from cache (if exists)
         uses: actions/cache@v3
@@ -233,6 +238,9 @@ jobs:
           search_artifacts: true
           search_depth: 10
 
+      - name: Unpack artifact
+        run: tar -xvf artifact.tar
+
       - name: Restore coverage
         uses: actions/cache@v3
         with:
@@ -240,14 +248,7 @@ jobs:
             coverage
             package.json
           key: coverage-${{ needs.init.outputs.checksum }}
-
-      - name: Unpack artifact
-        run: tar -xvf artifact.tar
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
+        
       - name: Codeclimate
         uses: paambaati/codeclimate-action@v3.2.0
         env:
@@ -255,13 +256,7 @@ jobs:
         with:
           coverageLocations: |
             ${{github.workspace}}/coverage/*.lcov:lcov
-      - uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: ${{ needs.init.outputs.yarn-cache-dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+
       - name: Release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
